/*******************************************************************************
 * Copyright (c) 2021,2023 Contributors to the Eclipse Foundation
 *
 * See the NOTICE file(s) distributed with this work for additional
 * information regarding copyright ownership.
 *
 * This program and the accompanying materials are made available under the
 * terms of the Apache License, Version 2.0 which is available at
 * https://www.apache.org/licenses/LICENSE-2.0.
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
 * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
 * License for the specific language governing permissions and limitations
 * under the License.
 *
 * SPDX-License-Identifier: Apache-2.0
 ******************************************************************************/

package org.eclipse.tractusx.bpdm.pool.entity

import jakarta.persistence.*

@Entity
@Table(
    name = "address_partners",
    indexes = [
        Index(columnList = "legal_entity_id"),
        Index(columnList = "site_id"),
    ]
)
class AddressPartner(
    @Column(name = "bpn", nullable = true, unique = true)
    var bpn: String,
    @ManyToOne
    @JoinColumn(name = "legal_entity_id")
    var legalEntity: LegalEntity?,
    @ManyToOne
    @JoinColumn(name = "site_id")
    var site: Site?,
    @ManyToOne(fetch = FetchType.LAZY, cascade = [CascadeType.ALL])
    @JoinColumn(name = "address_id")
    var address: Address
) : BaseEntity()