@startuml
skinparam groupInheritance 1

'--------------------- Entities ------------------------'

abstract class Business_Partner{}

class Legal_Entity {
	BPN: BPN-L
	Identifiers
	Names
	Legal_Form
	Status
	Profile_Classifications
	Bank_Accounts
    Roles
	Relations
	..
	Legal_Address
	..
	Sites
	..
	Addresses_Partners
}

class Site {
	BPN: BPN-S
	Name
	..
	MainAddress
	..
	Addresses_Partners
}

class Address_Partner {
	BPN: BPN-A
}

class Address {
    Country
    Administrative_Areas
    Localities
    Street
    Thoroughfares
    Premises
    PostCodes
    Postal_Delivery_Points
	Geographic_Coordinates
    Types
}

'--------------------- Relationships ------------------------'

Business_Partner <|-- Site
Business_Partner <|-- Legal_Entity
Business_Partner <|-- Address_Partner
Address_Partner --|> Address

Site::MainAddress "1" --> "1" Address
Site::Addresses_Partners "1" --> "*" Address_Partner

Legal_Entity::Legal_Address "1" --> "1" Address
Legal_Entity::Addresses_Partners "1" --> "*" Address_Partner
Legal_Entity::Sites "1" --> "*" Site

@enduml